// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit mode should properly render the edit form 1`] = `
<div>
  <form>
    <textarea
      rows="30"
      style="width: 100%;"
    >
      Arbitrary markdown
    </textarea>
    <div>
      <button
        type="submit"
      >
        SAVE
      </button>
    </div>
  </form>
</div>
`;

exports[`should properly render markdown 1`] = `
<div>
  <form>
    <p>
      Some 
      <strong>
        awesome
      </strong>
       markdown
    </p>
    <button
      type="submit"
    >
      EDIT
    </button>
  </form>
</div>
`;
